mobile v1.5 fixed button spacing

--- a/style.css
+++ b/style.css
@@ -328,7 +328,7 @@ h3 {
     border: none;
     border-radius: 15px;
     box-shadow: 0 9px #999;
-    margin-bottom: 2%;
+    margin-bottom: 6%;
     font-size: 1.1em;
   }
 
